--- a/css/base.css
+++ b/css/base.css
@@ -45,7 +45,7 @@ a{
     text-align: left;
     text-indent: 15px;
     font-size: 44px;
-    line-height: 32px;
+    line-height: 44px;
     width: 35px;
     overflow: hidden;
 }
@@ -206,7 +206,7 @@ a{
     .banner h2{
         text-align: center;
         font-weight: normal;
-        margin-bottom: 0;
+        margin: 0;
         font-size: 16px;
     }
     .banner h3{
