--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,24 @@ body{
     padding: 0;
     margin: 0;
 }
+@font-face {font-family: "iconfont";
+    src: url('./font/iconfont.eot'); /* IE9*/
+    src: url('./font/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('./font/iconfont.woff') format('woff'), /* chrome, firefox */
+    url('./font/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('./font/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+.icon-menu:before { content: "\e648"; }
+
 .disableScroll{
     overflow: hidden;
 }
@@ -44,8 +62,8 @@ a{
     font-family: 'Microsoft YaHei UI Light';
     text-align: left;
     text-indent: 15px;
-    font-size: 44px;
-    line-height: 44px;
+    font-size: 20px;
+    line-height: 40px;
     width: 35px;
     overflow: hidden;
 }
@@ -206,7 +224,7 @@ a{
     .banner h2{
         text-align: center;
         font-weight: normal;
-        margin: 0;
+        margin-bottom: 0;
         font-size: 16px;
     }
     .banner h3{
