--- a/css/base.css
+++ b/css/base.css
@@ -2,9 +2,6 @@ body{
     padding: 0;
     margin: 0;
 }
-*:active{
-    background:none!important;
-}
 @font-face {font-family: "iconfont";
     src: url('./font/iconfont.eot'); /* IE9*/
     src: url('./font/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -42,6 +39,9 @@ a{
     background: rgb(0,0,0);
     height: 44px;
     line-height: 44px;
+}
+.header:active{
+    background: rgb(0,0,0);
 }
 
 .header .header-con{
@@ -340,6 +340,9 @@ a{
     background: rgb(242,242,242);
     padding-bottom: 20px;
 }
+.footer-pc:active{
+    background: rgb(242,242,242);
+}
 .footer-pc .inner .col{
     float: left;
 }
@@ -401,6 +404,9 @@ a{
         width: 100%;
         background: rgb(242,242,242);
         padding-bottom: 20px;
+    }
+    .footer-mobi:active{
+        background: rgb(242,242,242);
     }
     .footer-mobi .inner{
         width: 90%;
