--- a/css/base.css
+++ b/css/base.css
@@ -40,6 +40,9 @@ a{
     height: 44px;
     line-height: 44px;
 }
+.header *:active{
+    background-color: rgb(0,0,0)!important;
+}
 
 .header .header-con{
     text-align: center;
