--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,9 @@ body{
     padding: 0;
     margin: 0;
 }
+::selection{
+    background: none!important;
+}
 @font-face {font-family: "iconfont";
     src: url('./font/iconfont.eot'); /* IE9*/
     src: url('./font/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
